@@ -68,6 +68,10 @@ Release ...
 * bc: Passing arrays to functions works properly now.
 * bc, dc: Output for obase>16 does not end with trailing spaces anymore.
 * bc: The '-=' operator did not work.
+* nawk: CONVFMT was used in the System V personality but not in the POSIX
+  personality, contrary to the documentation.
+* nawk: printf("%u") did not work if the argument was larger that INT_MAX.
+* nawk: RLENGTH was not set correctly for matches of zero length.
 
 Release 050123
 * tr: The highest acceptable wide character for complementing strings is now
